2016-05-18  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Fix a typo in a <sys/stat.h> inline function definition.

	* include/sys/stat.h [__MSVCRT_VERSION__ >= __MSVCR80_DLL]
	(stat): First argument declared as 'int'; should be 'const char *';
	correct it.

2016-05-12  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Resolve some strnlen() implementation issues.

	* mingwex/strnlen.s (__mingw_strnlen) [!NUL]: Correct termination
	logic; should have used jnz, not jz, to skip endpoint adjustment on
	scanning past a terminal NUL character code.

	* include/string.h [_POSIX_C_SOURCE >= 200809L] (strnlen): Do not
	#define it, as this breaks GCC compilation; use __CRT_ALIAS instead,
	with __JMPSTUB__ referencing via "oldname" libraries.

	* Makefile.in (jmpstub_awk_script, libimpl_awk_script): Adapt to
	facilitate assignment of __JMPSTUB__ and __LIBIMPL__ references to
	libraries other than libmingwex.a
	(strnlen.jmpstub.$OBJEXT): Assign it to all "moldname" libraries prior
	to libmoldname80.a, in addition to libcoldname.a, as specified by the
	__JMPSTUB__ assignment within <string.h>

2016-05-03  Keith Marshall  <keithmarshall@users.sourceforge.net>

	Enforce consistent specification of package version.

	* include/_mingw.h: Rename as...
	* include/_mingw.h.in: ...this build-time template file.
	(__MINGW32_VERSION): Redefine it, in terms of...
	(%PACKAGE_VERSION_LONG%): ...this substitution template.
	(__MINGW32_MAJOR_VERSION, __MINGW32_MINOR_VERSION)
	(__MINGW32_PATCHLEVEL): Likewise, redefine them in terms of...
	(%PACKAGE_VERSION_MAJOR%, %PACKAGE_VERSION_MINOR%)
	(%PACKAGE_VERSION_PATCH%): ...these.

	* configure.ac (AC_CONFIG_SRCDIR): Adjust for renamed file.
	(MINGW_AC_CONFIG_EXTRA_SRCDIR): Likewise, for similarly renamed
	w32api/include/w32api.h.in file.

	* Makefile.in (all-mingwrt-stage-1-only): Add dependency on...
	(_mingw.h, w32api.h): ...these; add rule to generate them, using...